# nader-AI

./: .dockerignore  .env.example  .gitattributes  .gitignore  Dockerfile  README.md  docker-compose.yml  package-lock.json
agent/: actions.ts  index.ts  package-lock.json  package.json  tsconfig.json
client/: next.config.ts  package-lock.json  package.json
client/api/: jobCall.ts
client/public/: front_man.stl
client/src/pages/: _app.tsx  index.tsx
client/src/pages/api/: gaia.ts  hyperbolic.ts  ora.ts
client/src/pages/components/: ChainSelector.tsx  JobForm.tsx  WalletConnect.tsx  dataVisualization.tsx
client/src/styles/: DataVisualization.module.css  Home.module.css
contracts/broadcast/agentWallet.s.sol/324/: run-1740823906.json
contracts/broadcast/agentWallet.s.sol/747/: run-latest.json
contracts/broadcast/agentWallet.s.sol/8453/: run-1740824007.json  run-1740824129.json
contracts/script/: agentWallet.s.sol
contracts/src/: agentWallet.sol
engine/: main.py  pyproject.toml
engine/agent/: actions.py  index.py
engine/agent/character/: character.json
engine/cookies/: cookies.json
engine/orchestrator/: orchestrator.py
engine/scripts/: seed.py
engine/server/: main.py
example_questions/: questions.json
server/: log.py  pyproject.toml
server/agent/: actions.py  index.py  main.py
server/agent/character/: naderCharacter.json
twitter/: cookies.json  mongo.py  pyproject.toml
twt/: mongo.py  red.py  worker.py
